--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/jrgartner/Social-Network-API/issues"
   },
-  "homepage": "https://github.com/jrgartner/Social-Network-API#readme"
+  "homepage": "https://github.com/jrgartner/Social-Network-API#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "moment": "^2.29.4",
+    "mongoose": "^6.5.1",
+    "nodemon": "^2.0.19"
+  }
 }
